atualizado portflio usando layout e box model

--- a/index.html
+++ b/index.html
@@ -2,58 +2,38 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
 
-    <style>
-#nova-fonte {
-    font-family: Arial, Helvetica, sans-serif;
-}
-#fonte-descricao {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
-}
-
-body {
-    background-color:rgb(0, 255, 98)
-}
-
-.estilo-c1 {
-font-size:large ;
-}
-
-.estilo-d2 {
-font-size: x-large;
-}
-
-.estilo-e3 {
-font-size:medium
-}
-
-
-
-
-    </style>
-
+    
 </head>
 
 <body>
     <h1>Meu primeiro Portfólio Web</h1>
-    <h2 id="nova-fonte">Thiago de Sousa Amorim</h2>
-<img src="https://scontent-gig2-1.xx.fbcdn.net/v/t1.18169-9/20638078_1135646329912479_591518374731530774_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeG0ZmsUxNohlPpjV1mxdkD-yZxdrAVKZEPJnF2sBUpkQ2lhEFlocMSw4eCcv1zF2YScTPCIQg0sDOJZ0rKHu52l&_nc_ohc=R0SCm_mm0yYAX8JrfsZ&_nc_oc=AQnPvYBmgbcnR3y6XpN5zBT384msRJRjtTVHPSfJAV-LYQgcS8P_RsWpHYp6mtCj-nI&_nc_ht=scontent-gig2-1.xx&oh=00_AT-Bd9lsgEe6GZuem5T7dSnt87bh3O6UV5oTAxZX0xK2gQ&oe=6347DE9E" alt="minha foto em casa com a camisa do Flamengo" width="200px"> 
-<p id="fonte-descricao">Olá, me chamo Thiago tenho 25 anos, sou Brasileiro e sou da cidade do <strong>Rio de janeiro</strong> .</p>
+ <div>
+        <h2 id="nova-fonte">Thiago de Sousa Amorim</h2>
+  <div id="div-filha">      
+    <img src="https://scontent-gig2-1.xx.fbcdn.net/v/t1.18169-9/20638078_1135646329912479_591518374731530774_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeG0ZmsUxNohlPpjV1mxdkD-yZxdrAVKZEPJnF2sBUpkQ2lhEFlocMSw4eCcv1zF2YScTPCIQg0sDOJZ0rKHu52l&_nc_ohc=R0SCm_mm0yYAX8JrfsZ&_nc_oc=AQnPvYBmgbcnR3y6XpN5zBT384msRJRjtTVHPSfJAV-LYQgcS8P_RsWpHYp6mtCj-nI&_nc_ht=scontent-gig2-1.xx&oh=00_AT-Bd9lsgEe6GZuem5T7dSnt87bh3O6UV5oTAxZX0xK2gQ&oe=6347DE9E" id="minha-foto" alt="minha foto em casa com a camisa do Flamengo" width="200px"> 
+    <p id="fonte-descricao">Olá, me chamo Thiago tenho 25 anos, sou Brasileiro e sou da cidade do <strong>Rio de janeiro</strong> .</p>
+  </div>
+</div>
 <h2>habilidade que possuo:</h2>
 
-<li class="estilo-c1"><a href= "#cauteloso">Cauteloso</li>
-<li><a href="#paciente">Paciente</a></li>
-<li class="estilo-d2">Divertido</li>
-<li class="estilo-e3"><strong>Empático</strong></li>
-<li><a href="https://scontent-gig2-1.xx.fbcdn.net/v/t1.18169-9/20638078_1135646329912479_591518374731530774_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeG0ZmsUxNohlPpjV1mxdkD-yZxdrAVKZEPJnF2sBUpkQ2lhEFlocMSw4eCcv1zF2YScTPCIQg0sDOJZ0rKHu52l&_nc_ohc=R0SCm_mm0yYAX8JrfsZ&_nc_oc=AQnPvYBmgbcnR3y6XpN5zBT384msRJRjtTVHPSfJAV-LYQgcS8P_RsWpHYp6mtCj-nI&_nc_ht=scontent-gig2-1.xx&oh=00_AT-Bd9lsgEe6GZuem5T7dSnt87bh3O6UV5oTAxZX0xK2gQ&oe=6347DE9E">imagem</a></li>
-<h2>blog favorito:</h2>
+<ul>
+     <li class="estilo-c1"><a href= "#cauteloso">Cauteloso</a></li>
+    <li class="estilo-p1"><a href="#paciente">Paciente</a></li>
+    <li class="estilo-d2">Divertido</li>
+    <li class="estilo-e3"><strong>Empático</strong></li>
+</ul>
+    <li><a href="https://scontent-gig2-1.xx.fbcdn.net/v/t1.18169-9/20638078_1135646329912479_591518374731530774_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeG0ZmsUxNohlPpjV1mxdkD-yZxdrAVKZEPJnF2sBUpkQ2lhEFlocMSw4eCcv1zF2YScTPCIQg0sDOJZ0rKHu52l&_nc_ohc=R0SCm_mm0yYAX8JrfsZ&_nc_oc=AQnPvYBmgbcnR3y6XpN5zBT384msRJRjtTVHPSfJAV-LYQgcS8P_RsWpHYp6mtCj-nI&_nc_ht=scontent-gig2-1.xx&oh=00_AT-Bd9lsgEe6GZuem5T7dSnt87bh3O6UV5oTAxZX0xK2gQ&oe=6347DE9E">imagem</a></li>
+
+    <h2>blog favorito:</h2>
 <a href="https://participardapolitica.blogspot.com/" 
 target="_blank">artigo biologia</a>
 
-<p id="cauteloso">Na vida há tempo para se arriscar e tempo para se ser cauteloso, e um homem sensato sabe qual é a altura certa para cada uma destas coisas.</p>
+<p id="cauteloso">Na vida há tempo para se arriscar e tempo para se ser  <span id="style-cauteloso">cauteloso</span>, e um homem sensato sabe qual é a altura certa para cada uma destas coisas.</p>
 <br>
 <p>Saber encontrar a alegria na alegria dos outros é o segredo da felicidade</p>
 <br>
